--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </main>
         <footer>
             <div>
-                <P>&copy; <span class="year">Current Year</span> | Mariah Wedel | </P>
+                <P>&copy; <span class="year">Current Year</span> | Mariah Wedel | Rexburg, Idaho |</P>
             </div>
             <div>
                 <p>Last Updated: <span class="date">This time!</span></p>
