--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
             <hr>
             <div>
                 <ul>
-                    <li>Lesson 02: <a href="...">Title</a></li>
-                    <li>Lesson 03: <a href="...">Title</a></li>
-                    <li>Lesson 04: <a href="...">Title</a></li>
-                    <li>Lesson 05: <a href="...">Title</a></li>
-                    <li>Lesson 06: <a href="...">Title</a></li>
-                    <li>Lesson 07: <a href="...">Title</a></li>
-                    <li>Lesson 08: <a href="...">Title</a></li>
-                    <li>Lesson 09: <a href="...">Title</a></li>
-                    <li>Lesson 10: <a href="...">Title</a></li>
-                    <li>Lesson 11: <a href="...">Title</a></li>
+                    <li>Lesson 02: Design Principles Document<a href="week2.html">Title</a></li>
+                    <li>Lesson 03: Website Planning Document<a href="week3.html">Title</a></li>
+                    <li>Lesson 04: Chamber Home Page Build<a href="week4.html">Title</a></li>
+                    <li>Lesson 05: Chamber Home Page Continued<a href="week5.html">Title</a></li>
+                    <li>Lesson 06: Responsive Design<a href="week6.html">Title</a></li>
+                    <li>Lesson 07: The Discover Page - Image Section<a href="week7.html">Title</a></li>
+                    <li>Lesson 08: Join Page<a href="week8.html">Title</a></li>
+                    <li>Lesson 09: The Business Directory Page<a href="week9.html">Title</a></li>
+                    <li>Lesson 10: Using the Weather API<a href="week10.html">Title</a></li>
+                    <li>Lesson 11: The Temple Inn & Suites<a href="week11.html">Title</a></li>
                 </ul>
             </div>
             <hr>
