--- a/Lesson02/design-principles.html
+++ b/Lesson02/design-principles.html
@@ -78,7 +78,7 @@
           </section>
         </main>
         <footer>
-          <p> &copy; <span id = "currentyear"></span> .:|:. Adam Muy - Guatemala .:|:. </p>
+          <p> &copy; <span id = "currentyear"></span> | Mariah Wedel | Rexburg, Idaho | </p>
           <p>Last Modified On: <span id="lastmod"></span></p>
         </footer>
       </body>
