--- a/index.html
+++ b/index.html
@@ -52,12 +52,8 @@
             </div>
         </main>
         <footer>
-            <div>
-                <P>&copy; <span class="year">Current Year</span> | Mariah Wedel | Rexburg, Idaho |</P>
-            </div>
-            <div>
-                <p>Last Updated: <span class="date">This time!</span></p>
-            </div>
-        </footer>
+            <p> &copy; <span id = "currentyear"></span> | Mariah Wedel | Rexburg, Idaho | </p>
+            <p>Last Modified On: <span id="lastmod"></span></p>
+          </footer>
     </body>
 </html>
