--- a/Lesson02/design-principles.html
+++ b/Lesson02/design-principles.html
@@ -22,7 +22,7 @@
 
     <body>
         <header>
-          <h1>W02 ✅ Assignment: Design Principles Document</h1>
+          <h1>W02 Assignment: Design Principles Document</h1>
         </header>
         <main class="main-grid">
           <section class="container">
