--- a/Lesson02/design-principles.html
+++ b/Lesson02/design-principles.html
@@ -7,14 +7,14 @@
         
         <title>WDD230 Assignment Portal</title>
 
-        <link rel="stylesheet" type="text/css" href="css\style.css" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Domine&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="index.html">
 
         <script src="js\script.js" defer></script>
