--- a/Lesson02/design-principles.html
+++ b/Lesson02/design-principles.html
@@ -32,49 +32,33 @@
             <div class="scrolling-preview">
               <img src="images/apple.jpg" width="100%" alt="Example of the Clean Design">
             </div>
-            <p>
-              I choose this page as it demonstrates good use of color and contrast.
-              While it's a simple idea at its core, showing the people working 
-              in this Studio and what are their responsibilities, the execution with each 
-              of them having a photo that matches the background color it's perfect. 
-              <br>I think it directs your attention and makes you want to see all of the pictures
-              on the website and most importantly create an instant connection with the people
-              who work in this studio. 
-              This is accomplished by the vibrant colors against a white background and the 
-              great contrast that exists between them. 
+            <p>I chose Apple because as you can see, their website has a great amount of 
+                clean design and the white space that is also used creates a slick
+                and unique design.
+              <br>This being Apple, shows a great example of what white space and
+                what a clean design looks like. 
             </p>
           </section>
           <section class="container">
-            <h2>Fitt's Law</h2>
-            <h3>The McBride Company<br><a href="https://mcbridedesign.com/" target=”_blank”>https://mcbridedesign.com/</a></h3>
+            <h2>PARC: Repetition</h2>
+            <h3>Adobe<br><a href="https://www.adobe.com/" target=”_blank”>https://www.adobe.com/</a></h3>
             <div class="scrolling-preview">
-              <img src="images/Fitt's.jpg" width="100%" alt="Example of the Fitt's law">
+              <img src="images/adobe.jpg" width="100%" alt="Example of PARC: Repetition">
             </div>
             <p>
-              For me this is one of the best examples of the Fitt's principle,
-              the website is for a company whose work ranges from Graphic Desing to Interior Desing
-              passing through Architectural Desing, and they  have worked with big brands.
-              <br>They could have included all this information on their main page, however they opted
-              for 3 main options that encampulates their field of work. 
-              <br>The three options are centered with the same font size, I think this is perfect to
-              guide the user to one of three posibilites and then expand the options based on 
-              their initial desire. 
+              I chose this site because they use repetition in the top picture. 
+              They use the same logo but in different design techniques. 
+              <br> This site is a great example of repetition and 
             </p>
           </section>
           <section class="container">
-            <h2>Hick's Law</h2>
-            <h3>PayPal<br><a href="http://paypal.com/" target=”_blank”>http://paypal.com/</a></h3>
+            <h2>Rule of Thirds</h2>
+            <h3>Soulful Vibes Co.<br><a href="https://soulfulvibesco.com/" target=”_blank”>https://soulfulvibesco.com/</a></h3>
             <div class="scrolling-preview">
-              <img src="images/Hick's.jpg" width="100%" alt="Example of the Hick's law">
+              <img src="soulful.jpg" width="100%" alt="Example of Rule of Thirds">
             </div>
             <p>
-              I liked this site to exemplify Hick's Law, as soon as we open the page we are
-              presented with two options at the top, the Menu and Log In options. 
-              Then in the middle two arrows to know more about purchasing or selling online. 
-              <br>Most likely the users comming to this page will want to access their account 
-              and make an online transaction. While new commers to the platform can check 
-              the Menu options or the arrows and see all the posibilites the platform can present 
-              and know more about the service given by this company. 
+               
             </p>
           </section>
         </main>
