--- a/Lesson02/design-principles.html
+++ b/Lesson02/design-principles.html
@@ -58,7 +58,10 @@
               <img src="soulful.jpg" width="100%" alt="Example of Rule of Thirds">
             </div>
             <p>
-               
+              I chose this one because the bowl that is on the left is 
+              off centered and uses the Rule of Thirds. This site is a 
+              really good site for showing the rule of thirds and shows
+              an amazing design.  
             </p>
           </section>
         </main>
