--- a/Lesson02/design-principles.html
+++ b/Lesson02/design-principles.html
@@ -7,7 +7,7 @@
         
         <title>WDD230 Assignment Portal</title>
 
-        <link rel="stylesheet" type="text/css" href="lesson02\style.css" />
+        <link rel="stylesheet" type="text/css" href="lesson02/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
