--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <hr>
             <div>
                 <ul>
-                    <li>Lesson 02: <a href="lesson02\design-principles.html">Design Principles Document</a></li>
+                    <li>Lesson 02: <a href="lesson02/design-principles.html">Design Principles Document</a></li>
                     <li>Lesson 03: <a href="week3.html">Website Planning Document</a></li>
                     <li>Lesson 04: <a href="week4.html">Chamber Home Page Build</a></li>
                     <li>Lesson 05: <a href="week5.html">Chamber Home Page Continued</a></li>
