--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -28,7 +28,7 @@
           <section class="container">
             <h2>White Space and Clean Design</h2>
             <h3>Apple<br><a href="https://www.apple.com/macbook-air/?ref=land-book.com" target=”_blank”>https://www.apple.com/macbook-air/?ref=land-book.com</a></h3>
-              <img src="images/apple.jpg" width="100%" alt="Example of the Clean Design">
+              <img src="../images/apple.jpg" width="100%" alt="Example of the Clean Design">
             <p>
                 I chose Apple because as you can see, their website has a great amount of 
                 clean design and the white space that is also used creates a slick
@@ -40,7 +40,7 @@
           <section class="container">
             <h2>PARC: Repetition</h2>
             <h3>Adobe<br><a href="https://www.adobe.com/" target=”_blank”>https://www.adobe.com/</a></h3>
-              <img src="images/adobe.jpg" width="100%" alt="Example of PARC: Repetition">
+              <img src="../images/adobe.jpg" width="100%" alt="Example of PARC: Repetition">
             <p>
               I chose this site because they use repetition in the top picture. 
               They use the same logo but in different design techniques. 
@@ -50,7 +50,7 @@
           <section class="container">
             <h2>Rule of Thirds</h2>
             <h3>Soulful Vibes Co.<br><a href="https://soulfulvibesco.com/" target=”_blank”>https://soulfulvibesco.com/</a></h3>
-              <img src="soulful.jpg" width="100%" alt="Example of Rule of Thirds">
+              <img src="../images/soulful.jpg" width="100%" alt="Example of Rule of Thirds">
             <p>
               I chose this one because the bowl that is on the left is 
               off centered and uses the Rule of Thirds. This site is a 
