--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <body>
         <header>
             <div class="profile">
-                <img src="Images/IMG_9580.jpg" alt="Picture of Mariah Wedel" width="200">
+                <img src="../wdd230/images/IMG_9580.jpg" alt="Picture of Mariah Wedel" width="200">
             </div>
             <div class="name">
                 <h1>Mariah Wedel</h1>
