--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="index.html">
 
-        <script src="js\script.js" defer></script>
+        <script src="js/script.js" defer></script>
     </head>
 
     <body>
@@ -38,8 +38,8 @@
             </p>
           </section>
           <section class="container">
-            <h2>PARC: Repetition</h2>
-            <h3>Adobe<br><a href="https://www.adobe.com/" target=”_blank”>https://www.adobe.com/</a></h3>
+            <h2 class = "second-heading">PARC: Repetition</h2>
+            <h3 class = "second-heading-name">Adobe<br><a href="https://www.adobe.com/" target=”_blank”>https://www.adobe.com/</a></h3>
               <img src="../images/adobe.jpg" width="100%" alt="Example of PARC: Repetition">
             <p>
               I chose this site because they use repetition in the top picture. 
@@ -48,8 +48,8 @@
             </p>
           </section>
           <section class="container">
-            <h2>Rule of Thirds</h2>
-            <h3>Soulful Vibes Co.<br><a href="https://soulfulvibesco.com/" target=”_blank”>https://soulfulvibesco.com/</a></h3>
+            <h2 class = "third-heading">Rule of Thirds</h2>
+            <h3 class = "third-heading-name">Soulful Vibes Co.<br><a href="https://soulfulvibesco.com/" target=”_blank”>https://soulfulvibesco.com/</a></h3>
               <img src="../images/soulful.jpg" width="100%" alt="Example of Rule of Thirds">
             <p>
               I chose this one because the bowl that is on the left is 
