--- a/index.html
+++ b/index.html
@@ -10,32 +10,30 @@
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Tapestry&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Domine&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/normalize.css">
 
-        <script src="js\script.js" defer></script>
+        <script src="js/script.js" defer></script>
     </head>
     <body>
         <header>
-            <div class="profile">
-                <img src="./images/IMG_9580.jpg" alt="Picture of Mariah Wedel" width="200">
-            </div>
-            <div class="name">
-                <h1>Mariah Wedel</h1>
-            </div>
+            <img src="./images/IMG_9580.jpg" alt="Picture of Mariah Wedel" width="200">
+
+            <h1>Mariah Wedel</h1>
+
         </header>
         <main>
-            <div>
-                <h2>WDD230 Assignment Portal</h2>
-            </div>
+
+            <h2>WDD230 Assignment Portal</h2>
+
             <hr>
             <div>
                 <ul>
                     <li>Lesson 02: <a href="lesson02/design-principles.html">Design Principles Document</a></li>
-                    <li>Lesson 03: <a href="week3.html">Website Planning Document</a></li>
+                    <li>Lesson 03: <a href="lesson03/index.html">Website Planning Document</a></li>
                     <li>Lesson 04: <a href="week4.html">Chamber Home Page Build</a></li>
                     <li>Lesson 05: <a href="week5.html">Chamber Home Page Continued</a></li>
                     <li>Lesson 06: <a href="week6.html">Responsive Design</a></li>
@@ -47,9 +45,9 @@
                 </ul>
             </div>
             <hr>
-            <div>
-                <p>Some lessons may need more than one activity/assignment link.</p>
-            </div>
+
+            <p>Some lessons may need more than one activity/assignment link.</p>
+
         </main>
         <footer>
             <p> &copy; <span id = "currentyear"></span> | Mariah Wedel | Rexburg, Idaho | </p>
