--- a/lesson03/color-scheme.html
+++ b/lesson03/color-scheme.html
@@ -19,12 +19,6 @@
     </head>
 
     <body>
-        <header>
-          <h1 class="town">Madison</h1>
-          <h1>Chamber of Commerce</h1>
-          <img src="./images/logo.jpg" alt="website-logo" width="200">
-        </header>
-    
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -38,9 +32,20 @@
              <input type="submit" value="Go!">
            </form>
          </nav>
+
+         <header>
+            <h1 class="town">Madison</h1>
+            <h1>Chamber of Commerce</h1>
+          </header>
     
          <main>
-
+            <h2>Color Scheme</h2>
+            <p>I chose this color scheme as I thought the colors went well together and I love the color purple.
+                I think I will choose the lighter purple, Lavender Web as the background. The purple to the left of it, French Lilac as
+                the heading colors. The Ivory as the body color, I thought about using the Cafe Au Lait as the font color, and finally
+                the last purple, Dark Blue Gray for the other stuff. I will use these colors accordingly and in sinc so they look good together.
+            </p>
+            <img src="../images/ColorScheme.jpg" alt="color-scheme" width="100%">
 
         </main>
 
