--- a/lesson03/target-audience.html
+++ b/lesson03/target-audience.html
@@ -19,11 +19,6 @@
     </head>
 
     <body>
-        <header>
-          <h1 class="town">Madison</h1>
-          <h1>Chamber of Commerce</h1>
-          <img src="./images/logo.jpg" alt="website-logo" width="200">
-        </header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -38,9 +33,64 @@
            </form>
          </nav>
 
+         <header>
+            <h1 class="town">Madison</h1>
+            <h1>Chamber of Commerce</h1>
+          </header>
+
         <main>
+            <h2>Target Audience</h2>
+            <p>
+                The targeted audience for this site is for families that are outgoing, like the small town feel, and like to
+                have fun with the Rexburg community. <br>
+                It is for those that want to get to know the community and all it has to offer. 
+            </p>
 
+            <h2>Two Personas</h2>
+            <h3>Persona one:</h3>
+            <p>
+              Persona: Stay-At-Home-Mom <br>
+              <br>
+              Name: Samantha Whimsbert <br>
+              <br>
+              Demographics: <br>
+              -30 years old <br>
+              -Married <br>
+              -Mother of three children <br>
+              -Has a Bachelor's in ECE <br>
+              <br>
+              Additional Info: She is a well educated women who is comfortable wtih her phone and most likely be using this to access the site. <br>
+              This is a great opprotunity for her to look up what events and activities there are in Rexburg so that she will have a plan for 
+              when her family visits the town and make sure that they have a good time.<br>
 
+            <br>
+            <h3>Persona two:</h3>
+              <p>
+                Persona: Active Elderly Women <br>
+                <br>
+                Name: Doris Brington <br>
+                <br>
+                Demographics: <br>
+                -80 years old <br>
+                -Married <br>
+                -Mother of 5 children <br>
+                -Grandmother of 14 grandchildren <br>
+                -Has a Bachelor's in Economics but is happily living in retirment community <br>
+                <br>
+                Additional Info: She has her distant family coming for the summer and wants to find some fun activities for them to attend.<br>
+                She is looking for fun summer activites and maybe some swimming for the grandchildren.
+              </p>
+            </p>
+
+            <h2>Scenarios</h2>
+            <p>
+                1. What day is the Farmer's market? What time?<br>
+                2. What days are the Rodeo this summer?<br>
+                3. When is the Rexburg Carnival?<br>
+                4. When does the splash pad at Porter Park and the Centennial Carousel open?<br>
+                5. When does Rexburg Rapids open?<br>
+            </p>
+            
         </main>
 
 
@@ -48,3 +98,5 @@
             <p> &copy; <span id = "currentyear"></span> | Mariah Wedel | Rexburg, Idaho | </p>
             <p>Last Modified On: <span id="lastmod"></span></p>
           </footer>
+
+          <!--Change heading fonts, can't read-->
