--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
         </main>
         <footer>
-            <p> &copy; <span id = "currentyear"></span> | Mariah Wedel | Rexburg, Idaho | </p>
-            <p>Last Modified On: <span id="lastmod"></span></p>
+            <p> &copy; <span id = "year"></span><span id="lastUpdate"></span></p>
+            <script src="js/main-page.js"></script>
           </footer>
     </body>
 </html>
