--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -61,7 +61,7 @@
         </main>
         <footer>
           <p> &copy; <span id = "year"></span><span id="lastUpdate"></span></p>
-          <script src="js/date.js"></script>
+          <script src="./date.js"></script>
         </footer>
       </body>
       </html>
