--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </main>
         <footer>
             <p> &copy; <span id = "year"></span><span id="lastUpdate"></span></p>
-            <script src="js/main-page.js"></script>
+            <script src="./main-page.js"></script>
           </footer>
     </body>
 </html>
