--- a/lesson03/index.html
+++ b/lesson03/index.html
@@ -60,11 +60,10 @@
           </article>
 
         </main>
-    
         <footer>
-            <p> &copy; <span id = "currentyear"></span> | Mariah Wedel | Rexburg, Idaho | </p>
-            <p></p>
-          </footer>
+          <p> &copy; <span id = "year"></span><span id="lastUpdate"></span></p>
+          <script src="./page.js"></script>
+        </footer>
         
       </body>
     </html>
