--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <ul>
                     <li>Lesson 02: <a href="lesson02/design-principles.html">Design Principles Document</a></li>
                     <li>Lesson 03: <a href="lesson03/index.html">Website Planning Document</a></li>
-                    <li>Lesson 04: <a href="week4.html">Chamber Home Page Build</a></li>
+                    <li>Lesson 04: <a href="chamber/index.html">Chamber Home Page Build</a></li>
                     <li>Lesson 05: <a href="week5.html">Chamber Home Page Continued</a></li>
                     <li>Lesson 06: <a href="week6.html">Responsive Design</a></li>
                     <li>Lesson 07: <a href="week7.html">The Discover Page - Image Section</a></li>
