--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,10 +23,10 @@
     <body>
     
         <nav>
-          <!--Put hamburger button here.-->
+          <button>&#9776;</button>
             <ul>
                 <li><a href="index.html"><b>Home</b></a></li>
-                <li><a href=".html"><b>Discover</b></a></li>
+                <li class = "active"><a href=".html"><b>Discover</b></a></li>
                 <li><a href=".html"><b>Directory</b></a></li>
                 <li><a href=".html"><b>Join/Contact</b></a></li>
               </ul>
