--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,8 +23,8 @@
     <body>
     
         <nav>
-          <button>&#9776;</button>
-            <ul>
+          <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
+            <ul id="primaryNav">
                 <li><a href="index.html"><b>Home</b></a></li>
                 <li class = "active"><a href=".html"><b>Discover</b></a></li>
                 <li><a href=".html"><b>Directory</b></a></li>
@@ -98,8 +98,6 @@
           </div>
             </footer>
             <script src="js/main.js"></script>
-          <!--Put hamburger button js here-->
+            <script src="js/hamburger.js"></script>
       </body>
     </html>
-
-    <!--Hamburger should make nav disappear is small and medium view and have the hamburger button-->
