--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="./css/medium.css" />
         <link rel="stylesheet" href="./css/large.css" />
         <link rel="stylesheet" href="./images/logo.jpg">
+        <link rel="icon" href="../favicon.ico" type="image/x-icon">
 
     </head>
 
