--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <li>Lesson 03: <a href="lesson03/index.html">Website Planning Document</a></li>
                     <li>Lesson 04: <a href="chamber/index.html">Chamber Home Page Build</a></li>
                     <li>Lesson 05: <a href="week5.html">Chamber Home Page Continued</a></li>
+                    <li>Lesson 05: <a href="../bom.html">DOM Manipulation</a></li>
                     <li>Lesson 06: <a href="week6.html">Responsive Design</a></li>
                     <li>Lesson 07: <a href="week7.html">The Discover Page - Image Section</a></li>
                     <li>Lesson 08: <a href="week8.html">Join Page</a></li>
