--- a/bom/bom.html
+++ b/bom/bom.html
@@ -38,6 +38,6 @@
                     </div>
                 </section>
             </main>
-            <script src="js\bom.js"></script>
+            <script src="./bom.js"></script>
         </body>
 </html>
