--- a/bom/bom.html
+++ b/bom/bom.html
@@ -19,21 +19,22 @@
             <header>
                 <h1>Book of Mormon ~ Favorite Chapters</h1>
                 <form id="new-chapter">
-                    <input type="text" id="favChap-input" placeholder=" Ex. Jacob 7 " />
-                    <input type="submit" id="favChap-submit" value="New Chapter " />
+                    <input type="text" id="favChap-input" placeholder=" Ex. Jacob 7" />
+                    <input type="submit" id="favChap-submit" value="New Chapter" />
                 </form>
             </header>
             <main>
                 <section class="listcontainer">
                     <h2>Chapters</h2>
                     <div id="chapters">
-                        <div class="chapter ">
+                        <div class="chapter">
                             <div class="content ">
-                                <input type="text " class="text " value="My favorite chapters " readonly/>
+                                <input type="text" class="text" value="My favorite chapters" readonly/>
                             </div>
-                            <div class="actions ">
-                                <button class="edit ">Edit</button>
-                                <button class="delete ">Delete</button> </div>
+                            <div class="actions">
+                                <button class="edit">Edit</button>
+                                <button class="delete">Delete</button> 
+                            </div>
                         </div>
                     </div>
                 </section>
