--- a/chamber/index.html
+++ b/chamber/index.html
@@ -56,9 +56,10 @@
               /></a>
               </div>
               <div class="current-date">
-                <span id="date"></span>
+                <b><span id="date"></span></b>
               </div>
 
+              <b><section id="banner"></section></b>
           </header>
 
           <main>
