--- a/chamber/index.html
+++ b/chamber/index.html
@@ -67,7 +67,17 @@
                 Hero with site name and call to action
             </div>
             <div class="event">
-                Event
+              <h1 id="event-rex">MONSTERS OF DESTRUCTION</h1>
+              <p id="event-info">
+                Trucks going head to head!<br>
+                Come join us for Monsters of Destruction<br>
+                Saturday, July 9th, Madison County Fairgrounds from 1:00 - 3:30 p.m.<br>
+                ~ Outdoors under the lights<br>
+                ~ FREE Pit Party starts 2 hours prior<br>
+                ~ Parking is free<br>
+                <br>
+                More info on: https://monstersofdestruction.com/rexburg-id/ <br>
+              </p>
             </div>
             <div class="weather">
                 Weather
@@ -93,10 +103,10 @@
     
         <footer>
           <div class="down-footer">
-            <p id="copyright">&copy;<span id="year"></span><b> Madison Chamber of Commerce</b></p>
+            <b><p id="copyright">&copy;<span id="year"></span> Madison Chamber of Commerce</b></p>
             <p id="name"><b>Mariah Wedel</b></p>
             <p id="class-name"><b>WDD 230 Project</b></p>
-            <p id="update"><b>Last Updated: </b><span id="lastupdate"></span></p>
+            <p id="update"><b>Last Updated: <span id="lastupdate"></span></p></b>
           </div>
             </footer>
             <script src="js/main.js"></script>
