--- a/chamber/index.html
+++ b/chamber/index.html
@@ -64,7 +64,10 @@
 
           <main>
             <div class="hero">
-                Hero with site name and call to action
+                <h3 class="hero-header">Welcome to Madison County, Rexburg</h3>
+                <img id="rexburg-pic"
+                src="../images/rexburg.jpg"
+                alt="Rexburg"/>
             </div>
             <div class="event">
               <h1 id="event-rex">MONSTERS OF DESTRUCTION</h1>
@@ -83,10 +86,18 @@
                 Weather
             </div>
             <div class="join">
-                Join
+                <h1 id="join">Join us!</h1>
+                <p id="join-info">
+                  Discover how to join the chamber of commerce and how it will benifit your organization!
+                </p>
             </div>
             <article class="news-release">
-                News Release
+              <h1 id="news">News Release</h1>
+                <p id="news-info">Investigation underway after dead body found west of Rexburg.
+                <br>
+                <br>
+                https://www.eastidahonews.com/2022/05/investigation-underway-after-dead-body-found-west-of-rexburg/ 
+                </p>
             </article>
             <div class="spotlight">
                 <section class="spot">
