--- a/chamber/index.html
+++ b/chamber/index.html
@@ -95,19 +95,21 @@
               <h1 id="news">News Release</h1>
                 <p id="news-info">Investigation underway after dead body found west of Rexburg.
                 <br>
+                It was located around 9 a.m. Friday morning in the Cartier Slough Wildlife Management Area of the Snake River west of Rexburg, 
+                according to a news release from the Madison County Sheriff’s Office.
                 <br>
                 https://www.eastidahonews.com/2022/05/investigation-underway-after-dead-body-found-west-of-rexburg/ 
                 </p>
             </article>
             <div class="spotlight">
                 <section class="spot">
-                    Spotlight 1
+                    Spotlight 1 Salt Lake Express
                 </section>
                 <section class="spot">
-                    Spotlight 2
+                    Spotlight 2 Bear World
                 </section>
                 <section class="spot" id="spot3">
-                    Spotlight 3
+                    Spotlight 3 Flight Museum
                 </section>
             </div>
           </main>
