--- a/chamber/index.html
+++ b/chamber/index.html
@@ -104,12 +104,18 @@
             <div class="spotlight">
                 <section class="spot">
                     Spotlight 1 Salt Lake Express
+                    website and phone number info
+                    add border top?
                 </section>
                 <section class="spot">
                     Spotlight 2 Bear World
+                    website and phone number info
+                    add border top?
                 </section>
                 <section class="spot" id="spot3">
                     Spotlight 3 Flight Museum
+                    website and phone number join-info
+                    add border top?
                 </section>
             </div>
           </main>
