--- a/chamber/index.html
+++ b/chamber/index.html
@@ -103,19 +103,39 @@
             </article>
             <div class="spotlight">
                 <section class="spot">
-                    Spotlight 1 Salt Lake Express
-                    website and phone number info
-                    add border top?
+                    <h1 id="spot-one">Salt Lake Express</h1>
+                    <p id="spot-one-info">
+                      <img id="slc-pic" src="../images/slcexpress.jpg"
+                      alt="Salt Lake Express"/>
+                      Plan your trip now and enjoy the ride! <br>
+                      <br>
+                      https://saltlakeexpress.com/destination/rexburg-byu-idaho-id/
+                      <br>
+                      (208)-656-8824 ~ Salt Lake Express
+                      </p>
+
                 </section>
                 <section class="spot">
                     Spotlight 2 Bear World
                     website and phone number info
                     add border top?
+
+                    Drive-Thru Wildlife Park!
+
+                    (208) 359-9688
+                    https://yellowstonebearworld.com/
+
                 </section>
                 <section class="spot" id="spot3">
                     Spotlight 3 Flight Museum
                     website and phone number join-info
                     add border top?
+
+                    Large aviation hangar showcasing a collection of old-school military & civilian aircraft.
+
+                    (208) 359-5905
+                    https://legacy-flight-museum.edan.io/
+
                 </section>
             </div>
           </main>
